# dailymail

./: .gitignore  .pylintrc  README.md  cat_files_for_ai.sh  dailymail.code-workspace
dailymail_shared_package/: pyproject.toml
dailymail_shared_package/src/dailymail_shared/: LLM_USAGE.md  __init__.py  my_gemini.py  my_instructor.py  my_llm.py  my_openai.py
digest/: Dockerfile  pyproject.toml
digest/dailymail_digest/: app.py  app_settings.py  digest.html.jinja  digest.py  index.py
digest/dailymail_digest/misc/: example-messages.json  requeue-DigestQueue.py  update_example_messages.py
lib/: pyproject.toml
lib/dailymail_lib/: my_openai.py
rss_reader/: pyproject.toml
rss_reader/dailymail_rss_reader/: app.py  app_settings.py  db.py  index.py
rss_reader/dailymail_rss_reader/misc/: add_rss_feed.py
scraper/: Dockerfile  NOTES.md  pyproject.toml
scraper/dailymail_scraper/: app.py  app_settings.py
src/: update-pip-recursively.sh
src/digest/: Dockerfile  ai.py  app.py  app_settings.py  digest.html.jinja  digest_claude.html.jinja  digest_claude.py  index.py  my_digest.py  my_email_lib.py  out.html  overall_summary.py  requirements.txt
src/email_reader/: app.py  app_ses.py  app_settings.py  app_sns.py  gmail_forwarding_confirmation.py  index.py  requirements.txt
src/immediate/: app.py  app_settings.py  immediate.html.jinja  index.py  my_email_lib.py  requirements.txt
src/link_reader/: Dockerfile  app.py  app_settings.py  auth.py  index.py  my_errors.py  requirements.txt
src/link_scraper/: Dockerfile  app.py  app_s3.py  app_settings.py  index.py  requirements.txt  scrape_urls.py
src/rss_reader/: Dockerfile  app.py  app_settings.py  db.py  index.py  process_records.py  read_rss_feeds.py  requirements.txt  rss-bridge.md
summarizer/: pyproject.toml
(+125 files in other folders)
