[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dailymail-shared"
version = "0.1.0"
description = "Shared utilities for DailyMail services"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["dailymail_shared"]
